# clothy

./: .gitignore  Cargo.toml  Makefile.toml  index.html
asset_sources/: birb.blend1
assets/: birb.blend  readme.md
assets/models/: SimpleSkin2.gltf  birb.glb  birb.gltf  birb2.gltf
src/: main.rs
src/plugins/: camera.rs  mod.rs  poop.rs  score.rs
src/plugins/camera/: mod.rs
